--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
+    "nodemon": "^2.0.22",
+    "sass": "^1.62.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   }
