--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "server": "node server.js"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
     "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "socket.io": "^4.6.1",
-    "socket.io-client": "^4.6.1"
+    "socket.io-client": "^4.6.1",
+    "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
